<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Google Image Search</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="search_hint">Enter search query</string>
    <string name="search">Search</string>
    <string name="title_activity_image_detail">Image Details</string>
    <string name="settings">Settings</string>
    <string name="title_activity_advanced_search">Advanced Search</string>
    <string name="imgSize">Image Size</string>
    <string name="imgColor">Color Filter</string>
    <string name="imgType">Image Type</string>
    <string name="imgSite">Site Filter</string>
    <string name="no_filter">All</string>
    <string name="share">Share!</string>
    <string name="img_share_error">Sorry! Could not share this image! Please try another!</string>
    <string name="internet_error">Please check your internet connection!</string>
    <string name="generic_error">Something went wrong!</string>

    <string-array name="img_sizes">
        <item>@string/no_filter</item>
        <item>icon</item>
        <item>small</item>
        <item>medium</item>
        <item>large</item>
        <item>xlarge</item>
        <item>xxlarge</item>
        <item>huge</item>
    </string-array>

    <string-array name="img_types">
        <item>@string/no_filter</item>
        <item>face</item>
        <item>photo</item>
        <item>clipart</item>
        <item>lineart</item>
    </string-array>

    <string-array name="img_colors">
        <item>@string/no_filter</item>
        <item>black</item>
        <item>blue</item>
        <item>brown</item>
        <item>gray</item>
        <item>green</item>
        <item>orange</item>
        <item>pink</item>
        <item>purple</item>
        <item>red</item>
        <item>teal</item>
        <item>white</item>
        <item>yellow</item>
    </string-array>


</resources>
