<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.codepath.gridimagesearch.AdvancedSearchActivity">


    <TextView
        android:id="@+id/tvImgSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/imgSize"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignBottom="@+id/spImgSize"/>
    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spImgSize"
        android:layout_toRightOf="@+id/tvImgSize"
        android:layout_alignParentTop="true"
        android:outlineProvider="bounds"
        android:spinnerMode="dropdown" />
    <TextView
        android:id="@+id/tvImgColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/tvImgSize"
        android:layout_alignBottom="@+id/spImgColor"
        android:text="@string/imgColor"/>
    <Spinner
        android:id="@+id/spImgColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spImgSize"
        android:layout_toRightOf="@+id/tvImgColor"></Spinner>
    <TextView
        android:id="@+id/tvImgType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/tvImgColor"
        android:layout_alignBottom="@+id/spImgType"
        android:text="@string/imgType"/>
    <Spinner
        android:id="@+id/spImgType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spImgColor"
        android:layout_toRightOf="@+id/tvImgType"></Spinner>
    <TextView
        android:id="@+id/tvImgSite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/tvImgType"
        android:layout_alignBottom="@+id/etImgSite"
        android:text="@string/imgSite"/>
    <EditText
        android:id="@+id/etImgSite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/tvImgSite"
        android:layout_below="@+id/spImgType"/>
    <Button
        android:id="@+id/btnSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/tvImgSite"
        android:text="@string/search"
        android:onClick="onImageSearch"/>
</RelativeLayout>
